# commerce-ai-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  commerce-ai-platform-project-blueprint.md  docker-compose.yml  pyproject.toml  real-ecommerce-data-testing-plan.md
.agents/skills/commerce-platform-architecture/: SKILL.md
.agents/skills/commerce-platform-tdd/: SKILL.md
.agents/skills/commerce-saas-product-ux/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/api/: README.md  alembic.ini
apps/api/migrations/: README.md  env.py
apps/web/: README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/web/scripts/: run-playwright-screenshot-smoke.mjs
apps/worker/: README.md
datasets/fixtures/: README.md  demo_catalog_seed.json
docs/: demo-script.md  mvp-scope.md  product-brief.md  requirements.md
docs/architecture/: ai-agent-and-mcp-contract.md  architecture-governance.md  canonical-backend-architecture.md  canonical-frontend-architecture.md  catalog-ingestion-contract.md  data-validation-and-evidence-contract.md  duplicate-review-and-approval-contract.md  evaluation-contract.md  final-target-architecture.md  implementation-guide.md  m1-architecture-conformance.md  m2-demo-data-contract.md  observability-and-operations-contract.md  overview.md  retrieval-and-indexing-contract.md  tech-stack-decisions.md
docs/evaluation/: benchmark-plan.md
docs/planning/: m2-dashboard-implementation-plan.md  m2-execution-plan.md  m3-catalog-import-implementation-plan.md  mvp-backlog.md  phase-0-foundation.md  phase-1-mvp.md  project-roadmap.md
docs/ux/: ai-ui-prompts.md  design-direction.md  m2-ui-implementation-spec.md  screen-inventory.md  user-flows.md  v0-design-capture.md
infrastructure/docker/: README.md  api.Dockerfile  web.Dockerfile  worker.Dockerfile
tests/architecture/: test_architecture_boundaries.py
tests/unit/api/: test_health.py  (+3 more)
tools/architecture/: check_boundaries.py
(+194 files in other folders)
