[project]
name = "commerce-ai-platform"
version = "0.1.0"
description = "Multi-tenant AI commerce operations platform."
requires-python = ">=3.12"
dependencies = [
  "celery[redis]>=5.4.0,<6.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"commerce_ai_api" = "apps/api/src/commerce_ai_api"
"commerce_ai_worker" = "apps/worker/src/commerce_ai_worker"

[tool.setuptools.packages.find]
where = ["apps/api/src", "apps/worker/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps/api/src", "apps/worker/src"]
